Portfolio layout changes

--- a/about-me.html
+++ b/about-me.html
@@ -2,10 +2,24 @@
 <html>
     <head>
         <title>About Me</title>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
+        <div class="header"><h1>About Me</h1></div>
         <p>
-            I am Siddharth. I live in Noida.
+            I am Siddharth. I live in Noida. I am 14 years old and <br>
+            I love to program with html and css. <br>
+            This is the first website that I am designing. <br>
+            This is very fun! <br>
+            <br>
+            My hobbies are:
+            <div ><ul>
+                <li>programming,</li>
+                <li>playing games,</li>
+                <li>playing the guitar,</li>
+                <li>watching YouTube videos</li>
+                <li>and whiling away my time.</li>
+            </ul></div>
         </p>
     </body>
 </html>
