--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
         
         <div class="grid">
             <div class="item">
-                <a href="https://siddharth23052006.github.io/Silicon-Valley-Submission/">
-                <img src="https://via.placeholder.com/300"/>
+                <a href="https://siddharth23052006.github.io/Project-C35/">
+                <img src="Survey.JPG" width="300" height="300"/>
                 </a>
-                <p>Healthcare App</p>
+                <p>Survey to Bring Change</p>
             </div>
 
             <div class="item">
                 <a href="https://siddharth23052006.github.io/Silicon-Valley-Submission/">
-                    <img src="https://via.placeholder.com/300"/>
+                <img src="Capture.JPG" width="300" height="300"/>
                 </a>
-                <p>Healthcare App</p>
+                <p>Healthcare Helper</p>
             </div>
 
             <div class="item">
-                <a href="https://siddharth23052006.github.io/Silicon-Valley-Submission/">
-                <img src="https://via.placeholder.com/300"/>
+                <a href="https://siddharth23052006.github.io/P49-Origami-Website/">
+                <img src="Origami.JPG" width="300" height="300"/>
                 </a>
-                <p>Healthcare App</p>
+                <p>Origami Website</p>
             </div>
 
             <div class="item">
-                <a href="https://siddharth23052006.github.io/Silicon-Valley-Submission/">
-                <img src="https://via.placeholder.com/300"/>
+                <a href="https://siddharth23052006.github.io/Project-C32/">
+                <img src="Game.JPG" width="300" height="300"/>
                 </a>
-                <p>Healthcare App</p>
+                <p>Hexagon Game</p>
             </div>
         </div>
 
